fixed display if editor is none or too small

--- a/apps/frontend/src/style.css
+++ b/apps/frontend/src/style.css
@@ -11,7 +11,7 @@
 }
 
 .view-wrapper {
-  @apply border-zinc-800 flex relative;
+  @apply border-zinc-800 flex relative min-h-0 min-w-0;
 }
 
 .view {
